# HLZO

./: CMakeLists.txt
config/: hdfs_config
src/: CMakeLists.txt  hdfs_worker.cc  hdfs_worker.h  hlzo.cc  hlzo.h  hlzo_conf.cc  hlzo_conf.h  hlzo_def.h  hlzo_file.cc  hlzo_file.h  hlzo_hdfs.cc  hlzo_hdfs.h  hlzo_hdfs_connector.cc  hlzo_hdfs_connector.h  hlzo_hdfs_file.cc  hlzo_hdfs_file.h  hlzo_lzo_block.cc  hlzo_lzo_block.h  hlzo_lzo_context.cc  hlzo_lzo_context.h  hlzo_lzo_file.cc  hlzo_lzo_file.h  hlzo_lzo_header.cc  hlzo_lzo_header.h  hlzo_lzo_index.cc  hlzo_lzo_index.h  hlzo_lzo_parser.cc  hlzo_lzo_parser.h  hlzo_utils.cc  hlzo_utils.h  main.cc  my_log.cc  my_log.h
